--- a/publications.htm
+++ b/publications.htm
@@ -150,58 +150,58 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2024</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">42</span>. Hanlin Mo, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">43</span>. Hanlin Mo, <b>Guoying Zhao</b>.
 <u>RIC-CNN: Rotation-Invariant Coordinate Convolutional Neural Network</u>. 
 Pattern Recognition. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;3<span lang="en-us">41</span>.</font><font face="Times New Roman" size="4"> Jinsheng 
+<font size="4">&nbsp;3<span lang="en-us">42</span>.</font><font face="Times New Roman" size="4"> Jinsheng 
 Wei, Wei Peng, Guanming Lu, Yante Li, Jingjie Yan and <b>Guoying Zhao</b>. 
 <u>Geometric Graph Representation with Learnable Graph Structure and Adaptive AU 
 Constraint for Micro-Expression Recognition</u>. IEEE Transactions on Affective 
 Computing, 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;3<span lang="en-us">40</span>. Qing Liu, Hailong Zeng,&nbsp; Zhaodong Sun, Xiaobai Li, <b>
+<font size="4">&nbsp;3<span lang="en-us">41</span>. Qing Liu, Hailong Zeng,&nbsp; Zhaodong Sun, Xiaobai Li, <b>
 Guoying Zhao</b>, Yixiong Liang. Many Birds, One Stone: Medical Image 
 Segmentation with Multiple Partially Labelled Datasets. </font>
 <font face="Times New Roman" size="4">Pattern Recognition. 2024.</font></p>
 <div class="note-authors">
 	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-	<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">39</span>. Haoyu Chen, Hao Tang, Ehsan 
+	<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">40</span>. Haoyu Chen, Hao Tang, Ehsan 
 	Adeli, <b>Guoying Zhao</b>. <u>Towards Robust 3D Pose Transfer with 
 	Adversarial Learning</u>. CVPR 2024.<span lang="en-us"> </span></font>
 	<font face="Times New Roman" size="4">(Acceptance rate: 23.<span lang="en-us">6</span>%)</font></div>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">38</span>. Tuomas Varanka, Tapani Toivonen, 
+<font face="Times New Roman" size="4">&nbsp;3<span lang="en-us">39</span>. Tuomas Varanka, Tapani Toivonen, 
 Soumya Ranjan Tripathy, <b>Guoying Zhao</b>, Erman Acar. <u>PFStorer: 
 Personalized Face Restoration and Super-Resolution</u>. CVPR 2024. </font>
 <font face="Times New Roman" size="4">(Acceptance rate: 23.<span lang="en-us">6</span>%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;<font face="Times New Roman">3<span lang="en-us">37</span>. Xingyu Liu, Xu Cheng, 
+<font size="4">&nbsp;<font face="Times New Roman">3<span lang="en-us">38</span>. Xingyu Liu, Xu Cheng, 
 Haoyu Chen, Hao Yu, <b>Guoying Zhao</b>. <u>Differentiable Auxiliary Learning 
 for Sketch Re-Identification</u>. AAAI Conference on Artificial Intelligence (AAAI 
 2024). (Acceptance rate: 23.75%)</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;336. </font></span>
+<span lang="en-us"><font size="4">&nbsp;337. </font></span>
 <font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>. Remote-photoplethysmography 
 Physical Domain Attacks Database (RPDAD). ECCV 2024. (Acceptance rate: 27.9%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;335. </span>Yan 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;336. </span>Yan 
 Jiang, Xu Cheng, Hao Yu, Xingyu Liu, Haoyu Chen, <b>Guoying Zhao</b>. Domain 
 Shifting: A Generalized Solution for Heterogeneous Cross-Modality Person 
 Re-Identification. ECCV 2024. (Acceptance rate: 27.9%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;334.</font></span><font face="Times New Roman" size="4"><span lang="en-us">
+<span lang="en-us"><font size="4">&nbsp;335.</font></span><font face="Times New Roman" size="4"><span lang="en-us">
 </span>Wuti Xiong, <b>Guoying Zhao</b> &amp; Xiaobai Li. Exemplar-Free Incremental 
 Deepfake Detection. 27th European Conference on Artificial Intelligence (ECAI), 
 2024. (Acceptance rate: 23%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;333.</font></span><font face="Times New Roman" size="4">&nbsp;&nbsp; 
+<span lang="en-us"><font size="4">&nbsp;334.</font></span><font face="Times New Roman" size="4">&nbsp;&nbsp; 
 Haotian Liu, Chenhui Pan, Yang Liu, <b>Guoying Zhao</b> &amp; Xiaobai Li. Unified 
 Video and Image Representation for Boosted Video Face Forgery Detection. 27th 
 European Conference on Artificial Intelligence (ECAI), 2024. (Acceptance rate: 
 23%)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;3<span lang="en-us">32</span>. Yante Li, Yang Liu, </font>
+<font size="4">&nbsp;3<span lang="en-us">33</span>. Yante Li, Yang Liu, </font>
 <font face="Times New Roman" size="4">Andy Nguyen, </font><font size="4">Henglin 
 Shi, Eija Vuorenmaa, </font>
 <font face="Times New Roman" size="4">Sanna J&auml;rvel&auml;, <b>Guoying Zhao</b>. </font>
@@ -209,46 +209,50 @@ Shi, Eija Vuorenmaa, </font>
 Collaborative Learning: An Interdisciplinary Multimodal Dataset</u>. ACM 
 Transactions on Interactive Intelligent Systems (TIIS). 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4"><span lang="en-us">&nbsp;</span>331. Hao Yu, Xu Cheng, Hevin 
+<font size="4"><span lang="en-us">&nbsp;</span>332. Hao Yu, Xu Cheng, Hevin 
 Cheng, Wei Peng, Zitong Yu, <b>Guoying Zhao</b>. Discovering attention-guided 
 cross-modality correlation for visible¨Cinfrared person re-identification. 
 Pattern Recognition. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;330. Abdelrahman Mostafa, </font></span><font size="4"> <b>Guoying Zhao</b>.</font><span lang="en-us"><font size="4"> 
+<span lang="en-us"><font size="4">&nbsp;331. Abdelrahman Mostafa, </font></span><font size="4"> <b>Guoying Zhao</b>.</font><span lang="en-us"><font size="4"> 
 Tangent space-free Lorentz Spatial Temporal Graph Convolution Networks. </font>
 </span><font size="4">IEEE Signal Processing Letters. 2024</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<span lang="en-us"><font size="4">&nbsp;</font></span><font size="4">3<span lang="en-us">29.
+<span lang="en-us"><font size="4">&nbsp;</font></span><font size="4">3<span lang="en-us">30.
 </span>Hanlin Mo, <b>Guoying Zhao</b>. <u>Sorting Convolution Operation for 
 Achieving Rotational Invariance</u>. IEEE Signal Processing Letters. 2024</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4"><span lang="en-us">&nbsp;328. </span>Yizhu Zhang, Jingang Shi, 
+<font size="4"><span lang="en-us">&nbsp;329. </span>Yizhu Zhang, Jingang Shi, 
 Jiayin Wang, Yuan Zong, Wenming Zheng, <b>Guoying Zhao</b><span lang="en-us">. 
 MaskFusionNet: A Dual-Stream Fusion Model with Masked Pre-training Mechanism for 
 rPPG Measurement. </span></font>
 <font face="Times New Roman" size="4">TCSVT<span lang="en-us">, 2024.</span></font><font size="4"><span lang="en-us">
 </span></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4"><span lang="en-us">&nbsp;</span><font face="Times New Roman">32<span lang="en-us">7</span>. Shihang Dong, Kaijie Ma, Beijing Chen &amp; <b>Guoying Zhao</b>. <u>Active Defense against Voice Conversion through Generative Adversarial Network</u>. 
+<font size="4"><span lang="en-us">&nbsp;</span><font face="Times New Roman">32<span lang="en-us">8</span>. Shihang Dong, Kaijie Ma, Beijing Chen &amp; <b>Guoying Zhao</b>. <u>Active Defense against Voice Conversion through Generative Adversarial Network</u>. 
 IEEE Signal Processing Letters. 2024</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;326. </span>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;327. </span>
 Chaoxiong Ye, Ruyi Liu, Lijing Guo, <b>Guoying Zhao</b>, Qiang Liu. <u>A 
-negative emotional state impairs individuals¡¯ ability to filter distractorsfrom 
+negative emotional state impairs individuals¡¯ ability to filter distractors from 
 working memory: an ERP study</u>. Cognitive, Affective, &amp; Behavioral 
 Neuroscience. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;325. Lili Liu, Zhaoqiang Xia, 
+<font face="Times New Roman" size="4">&nbsp;326. Lili Liu, Zhaoqiang Xia, 
 Xiaobiao Zhang, Xiaoyi Feng, <b>Guoying Zhao</b>. Illumination 
 variation-resistant network for heart rate measurement by exploring RGB and MSR 
 spaces. IEEE Transactions on Instrumentation &amp; Measurement. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;324. Wuti Xiong, Haoyu Chen, <b>
+<font face="Times New Roman" size="4">&nbsp;325. Wuti Xiong, Haoyu Chen, <b>
 Guoying Zhao</b>, Xiaobai Li. AGIL-SwinT: Attention-Guided Inconsistency 
 Learning for Face Forgery Detection. Image and Vision Computing. 2024. </font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font size="4">&nbsp;32<span lang="en-us">3</span>. Marko Savic, <b>Guoying Zhao</b>. <u>RS-rPPG: Robust 
-Self-Supervised Learning for rPPG</u>. FG 2024.</font></p>
+<font face="Times New Roman" size="4">&nbsp;324. Marko Savic, <b>Guoying Zhao</b>. 
+PhySU-Net: Long Temporal Context Transformer for rPPG with Self-Supervised 
+Pre-training. ICPR 2024.</font></p>
+<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+<font size="4" face="Times New Roman">&nbsp;323. Marko Savic, <b>Guoying Zhao</b>. RS-rPPG: Robust 
+Self-Supervised Learning for rPPG. FG 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font size="4">&nbsp;32<span lang="en-us">2</span>. Atif Shah, Haoyu Chen, <b>Guoying Zhao</b>. <u>Naive Data 
 Augmentation Might Be Toxic: Data-prior Guided Self-supervised Representation 
@@ -257,7 +261,8 @@ Learning for Micro-gesture Recognition</u>. FG 2024.</font></p>
 <span lang="en-us"><font size="4">&nbsp;321. </font></span><font size="4">
 Zhaodong Sun, Xiaobai, Jukka Komulainen, <b>Guoying Zhao</b>. Biometric 
 Authentication Based on Enhanced Remote Photoplethysmography Signal Morphology. 
-IEEE International Joint Conference on Biometrics 2024.</font></p>
+IEEE International Joint Conference on Biometrics 2024.<span lang="en-us">
+</span>(<b>Best Paper Runner Up award</b>)</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font face="Times New Roman" size="4">&nbsp;320. Yujie Liu, Mingyue Li, Jiansen 
 Jing, Yante Li, <b>Guoying Zhao</b>. <u>Clothing Sampling Based on Active 
@@ -539,7 +544,9 @@ Micro-Gesture Recognition</u>. 26th International Conference on Pattern Recognit
 <b>Guoying Zhao</b>, and 
 Fang Liu. <u>Learning Optimal K-space Acquisition and Reconstruction using 
 Physics-Informed Neural Networks</u> (Abstract). 2022 International Society for 
-Magnetic Resonance in Medicine (ISMRM).</font></p>
+Magnetic Resonance in Medicine (ISMRM).<span lang="en-us"> </span>(<b>2022 
+International Society for Magnetic Resonance in Medicine (ISMRM, best conference 
+for MRI) Magna Cum Laude Merit Award (top 5%)</b>)</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span lang="en-us"><font face="Times New Roman" size="4">&nbsp;267. </font>
 </span><font face="Times New Roman" size="4">Yoon Lee, Haoyu Chen, <b>Guoying 
@@ -567,11 +574,13 @@ Wei Peng, Xiaopeng Hong, <b>Guoying Zhao</b>. <u>Tripool: Graph Triplet Pooling 
 Skeleton Based Action Recognition</u>. Pattern Recognition,
 115: 107921-107921, 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span style="font-family: 'Times New Roman',serif"><font size="4">
+<font size="4">
+<span style="font-family: 'Times New Roman',serif">
 <span lang="en-us">&nbsp;263.</span> Zitong Yu, Benjia Zhou, Jun Wan, Pichao 
 Wang, Haoyu Chen, Xin Liu, Stan Z. Li, <b>Guoying Zhao</b>. <u>Searching 
 Multi-Rate and Multi-Modal Temporal Enhanced Networks for Gesture Recognition</u>. 
-IEEE Transactions on Image Processing (TIP), 2021.</font></span></p>
+IEEE Transactions on Image Processing (TIP), 2021. (<b>The second prize of IEEE 
+Finland Jt. Chapter SP/CAS Best Paper Award 2022</b>)</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;26<span lang="en-us">2</span>.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
 for cross-modal retrieval</u>. Pattern Recognition. 2021.</font></span></p>
@@ -846,7 +855,8 @@ Frontiers in Psychology. 2019.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>2</font><span lang="en-us"><font face="Times New Roman" size="4">14</font></span><font face="Times New Roman" size="4">. Zitong Yu, Wei Peng, Xiaobai Li, Xiaopeng Hong, <b>Guoying Zhao</b>. Remote 
 Heart Rate Measurement from Highly Compressed Facial Videos: an End-to-end Deep 
-Learning Solution with Video Enhancement. <b>ICCV</b> 2019.</font></p>
+Learning Solution with Video Enhancement. <b>ICCV</b> 2019.<span lang="en-us">
+</span>(<b>IEEE Finland Section best student conference paper award 2020</b>).</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;</span>2<span lang="en-us">13</span>. Yingyue Xu, Dan Yu, Xiaopeng Hong, Wanli Ouyang, Rongrong Ji, Min Xu, <b>Guoying 
 Zhao</b>. Structured Modeling of Joint Deep Feature and 
