--- a/main_experience.htm
+++ b/main_experience.htm
@@ -50,10 +50,6 @@ Position:</font></b></p>
 	Science, Aalto University. </font></p>
 	</li>
 	<li>
-	<p style="text-align: left; margin-bottom:0cm; line-height:150%">
-	<font size="4">2022.09 -, Visiting Professor, CNS Lab, Stanford University.</font></p>
-	</li>
-	<li>
 	<p style="text-align: left; margin-bottom:0.5cm; line-height:150%"><font size="4">2010.09 -,
 	</font>
 	<span lang="zh-cn"><font size="4">Adjunct Professor 
@@ -68,6 +64,9 @@ Position:</font></b></p>
 <span style="font-weight: 700">
 <font size="4">work experience:</font></span></p>
 <ul>
+	<li>
+	<p style="text-align: left; margin-bottom:0; line-height:150%">
+	<font size="4">2022.09 - 2023.03, Visiting Professor, CNS Lab, Stanford University.</font></p></li>
 	<li>
 	<p style="text-align: left; margin-bottom:0; line-height:150%">
 	<font size="4">2014.01 - 
@@ -134,6 +133,11 @@ Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span><
 	Reliable Deep Learning Systems against Adversarial Attacks</b>. 336 000 &#8364;</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2024.06-2025.06: MFM Medical 
+	Foundation Model: LUMI supercomputer Extreme Scale Access (CSC ¨C IT Center 
+	for Science Finland project 462000616).</span></font></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2023.02-2025.02: FARIA (The 
 	Finnish-American Research &amp; Innovation Accelerator) project: <b>AI-assisted 
 	sundown syndrome detection in the Arctic region</b>. Funded by Ministry of 
@@ -146,7 +150,8 @@ Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span><
 	Xiaobai Li)</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt; margin-bottom: 0cm; line-height:150%; text-autospace:ideograph-numeric ideograph-other">
-	<font size="4">2022.03.01-2024.02.29: Mobility cooperation with India, China 
+	<font size="4">2022.03.01-2024.02.29: &quot;Forest growth monitoring from UAV 
+	imagery with hyperbolic neural network&quot;, Mobility cooperation with India, China 
 	or Germany, funded by Academy of Finland, 12 990 <span style="color: black">
 	&#8364;.</span></font></li>
 	<li>
