--- a/teammembers.htm
+++ b/teammembers.htm
@@ -41,7 +41,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
 		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Yang.jpg" width="148" height="147"></td>
+		&nbsp;</td>
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
@@ -61,28 +61,28 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
 		<td height="0" align="center" valign="top" width="184">
-		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
+		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="184">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="224">
-		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<img border="0" src="Kejuan.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="184">
+		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="224">
-		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
+		<b><font face="Times New Roman">Dr. Kejuan YUE</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
@@ -133,7 +133,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Ali.jpg" width="132" height="150"></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<img border="0" src="Hao.jpg" width="155" height="155"></td>
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
@@ -150,11 +150,11 @@ span.contentpasted0
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span></td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<td width="223" height="0" align="center" valign="top">
+		<img border="0" src="Boyi.jpg" width="147" height="148"></td>
 		<td width="226" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
@@ -165,8 +165,8 @@ span.contentpasted0
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<td width="223" height="0" align="center" valign="top">
+		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
 		<td width="226" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
@@ -183,9 +183,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Hao.jpg" width="155" height="155"></td>
+		&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
-		<img border="0" src="Boyi.jpg" width="147" height="148"></td>
+		&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -195,9 +195,19 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span></td>
+		<div style="language:fi;line-height:150%;margin-top:3.84pt;margin-bottom:0pt;
+margin-left:.31in;text-indent:-.31in;text-align:left;direction:ltr;unicode-bidi:
+embed;vertical-align:baseline">
+			<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+			<font face="Times New Roman"><b>Mr. Sabin Bhatta</b></font></div>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
+		<div style="language:fi;line-height:150%;margin-top:3.84pt;margin-bottom:0pt;
+margin-left:.31in;text-indent:-.31in;text-align:left;direction:ltr;unicode-bidi:
+embed;vertical-align:baseline">
+			<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+			<font face="Times New Roman"><b>Ms. Vijaya Mohanakrishnan Nair</b></font></div>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -211,46 +221,34 @@ span.contentpasted0
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Yujie.jpg"></td>
 		<td height="0" align="center" valign="top" width="184">
 		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Dr. Yujie LIU</b></font></p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Assistant Professor</b></font></p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>China University of Petroleum (East 
-		China)</b></font></p>
-		<p style="text-align: center"><span lang="zh-cn">Aug. 2023 - Aug. 2024</span></td>
 		<td height="0" align="center" valign="top" width="184">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font><p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Doctoral student</b></font></p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Southeast University</b></font></p>
-		<p style="text-align: center">Oct. 2022 - Oct. 2024</p>
-		<p>&nbsp;</p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		&nbsp;</td>
+		<p style="text-align: center">Oct. 2022 - Oct. 2024</p></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<b><span lang="zh-cn">Mr. Yushun X</span></b><span lang="en-us"><b>IAO</b></span><p>&nbsp;</p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Doctoral student</b></font></p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Southeast University</b></font></p>
-		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</td>
+		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p></td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		<p>&nbsp;</p>
 		<p>&nbsp;</td>
@@ -263,9 +261,22 @@ span.contentpasted0
 <table border="0" width="40%">
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></p>
+		<p>&nbsp;</p>
+		<p>
+		<span class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak" dir="ltr">
+		Assistant Professor in KFUPM, Saudi Arabia<span lang="zh-cn"> (Earlier
+		</span></span>AI scientist<span lang="zh-cn"> with </span>Silo.AI<span lang="en-us">, Helsinki</span><span class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak" dir="ltr"><span lang="zh-cn">)</span></span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Khanh.jpg" width="154" height="143"></td>
 		<td height="0" align="center" valign="top" width="397">
-		<span lang="en-us"><b><font face="Times New Roman">D</font></b></span><b><font face="Times New Roman">r. Khanh TRAN-THUONG</font></b><p>&nbsp;</p>
+		&nbsp;<p style="text-align: center"><span lang="en-us"><b>
+		<font face="Times New Roman">D</font></b></span><b><font face="Times New Roman">r. Khanh TRAN-THUONG</font></b></p>
+		<p>&nbsp;</p>
 		<p style="text-align: center">AI scientist</p>
 		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
 	</tr>
@@ -336,15 +347,6 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="397">
 		<b>Dr. Kevin Cheng</b><p>&nbsp;</p>
 		<p style="text-align: center">Imaging Algorithm Engineer<p>Huawei Technologies Oy (Finland) Co., Ltd.</td>
-	</tr>
-	<tr>
-		<td width="243" height="0" align="center" valign="top">
-		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
-		<td height="0" align="center" valign="top" width="397">
-		<b>Dr. Muzammil 
-	Behzad</b><p>&nbsp;</p>
-		<p style="text-align: center">AI scientist</p>
-		<p style="text-align: center">Silo.AI<span lang="en-us">, Helsinki</span></td>
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
@@ -486,9 +488,24 @@ span.contentpasted0
 </ul>
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
+<table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Yujie.jpg"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Dr. Yujie LIU</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Assistant Professor</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>China University of Petroleum (East 
+		China)</b></font></p>
+		<p style="text-align: center"><span lang="zh-cn">Aug. 2023 - Aug. 2024</span></td>
+	</tr>
+	</table>
 <ul>
 	<li>
-	<font face="Times New Roman">Ms. Yohani S. Ranasinghe (School of IT,
+	<p class="title" style="line-height: 150%"><font face="Times New Roman">Ms. Yohani S. Ranasinghe (School of IT,
 		Monash University Malaysia): Feb. - May 2024</font></li>
 	<li>
 	<p class="title" style="line-height: 150%"><font face="Times New Roman">Ms. 
