--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -363,36 +363,30 @@ Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems,
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
-of 2<span lang="en-us">7</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
-</span>The 3rd RePSS - Vision-based Remote Physiological Signal Sensing, with 
+of 2<span lang="en-us">6</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
+</span>2nd International Workshop on Multimodal and Responsible Affective 
+Computing, with ACM MM 2024; The 3rd RePSS - Vision-based Remote Physiological Signal Sensing, with 
 IJCAI 2024;
-MAC: ACM Multimedia 2024 M</font><span lang="EN-US" style="font-size: 13.5pt; font-family: Aptos">icro-Action Analysis Challenge; </span><font size="4">
-<span lang="en-us" style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">Workshop on Hybrid Intelligence with AD</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">RA 
-(AI, Data and Robotics Association ) f</span></font><span style="font-size: 13.5pt; font-family: Aptos">orum<span style="font-family: Aptos; font-size:13.5pt"> 
-2023; </span>
+MAC: ACM Multimedia 2024 Micro-Action Analysis Challenge; Workshop on Hybrid Intelligence with ADRA 
+(AI, Data and Robotics Association ) forum 
+2023; 
 The 1st and 2nd Challenge Workshop on Micro-gesture Analysis for Hidden Emotion 
-Understanding (MiGA) with IJCAI 2023, IJCAI2024; </span><span lang="en-us">
-<font size="4"> 
+Understanding (MiGA) with IJCAI 2023, IJCAI2024; 
 &nbsp;1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
-2023) with ACM MM 2023;</font></span><font size="4"><span style="line-height: 125%"> Chinese-MER 
-2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2n</span></font><span style="line-height: 125%"><font size="4">d Workshop on </font></span> <font face="Times New Roman">
-<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">What<span lang="en-us">'</span>s Next in Affect Modelling?</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> 
-with ACII 2022; </font></span> <font face="Times New Roman">
-<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">The 2nd Challenge Workshop on Remote Physiological Signal 
-Sensing (RePSS)</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> with ICCV 2021; </font></span> <font face="Times New Roman">
-<span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4">Multimodal Sentiment Analysis in Real-life 
-Media Challenge and Workshop</font></span><font face="Times New Roman"><span lang="en-us"><font size="4">&quot;</font></span></font><span style="line-height: 125%"><font size="4"> with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchles</font></span><span style="line-height: 125%"><font size="4">s 
-Technologies; ''C</font></span><font size="4" face="Times New Roman">VPM 2020: 
+2023) with ACM MM 2023; Chinese-MER 
+2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2nd Workshop on &quot;What's Next in Affect Modelling?&quot; 
+with ACII 2022; &quot;The 2nd Challenge Workshop on Remote Physiological Signal 
+Sensing (RePSS)&quot; with ICCV 2021; &quot;Multimodal Sentiment Analysis in Real-life 
+Media Challenge and Workshop&quot; with ACM Multimedia 2021; IEEE BigMM Grand Challenge 2020 on Touchless 
+Technologies; ''CVPM 2020: 
 International Workshop and Challenge on Computer Vision for Physiological 
-Measurement'' with CVPR 2020; W</font><font size="4"><span lang="EN-US" style="line-height: 125%; ">orkshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
-2018)&quot; with FG 2018; </span> </font> <font face="Times New Roman">
-<font size="4">W</font><span lang="en-us"><font size="4">orkshop 
-on &quot;</font></span><font size="4">CEFRL: Compact and Efficient Feature Representation and 
-Learning<span lang="en-us"> </span>in Computer Vision</font><span lang="en-us"><font size="4">&quot; 
-with ICCV 2017; </font> </span><font size="4">Workshop on<span lang="en-us"> &quot;Automatic Face Analytics 
-for Human Behavior Understanding (FaceHUB)&quot;</span> with BMVC 2017; ''Face</font></font><span lang="EN-US"><font size="4">s 
-'in-the-wild' Workshop-Challenge (Wild-Face)'' with CVPR 2017; </font> </span>
-<font size="4">''</font><font face="Times New Roman" size="4">Multi-view 
+Measurement'' with CVPR 2020; Workshop on &quot;Automatic Face Analytics for Human Behavior Understanding (FaceHUB 
+2018)&quot; with FG 2018; Workshop 
+on &quot;CEFRL: Compact and Efficient Feature Representation and 
+Learning in Computer Vision&quot; 
+with ICCV 2017; Workshop on &quot;Automatic Face Analytics 
+for Human Behavior Understanding (FaceHUB)&quot; with BMVC 2017; ''Faces 
+'in-the-wild' Workshop-Challenge (Wild-Face)'' with CVPR 2017; ''Multi-view 
 lipreading challenge'' with ACCV 2016; Workshop on ''Spontaneous Facial Behavior 
 Analysis'' with ACCV 2016; Workshop on ''Robust Features for Computer Vision'' with CVPR 2016; Workshop on Context-Based Affect Recognition and Affective Face 
 'in-the-wild' with CVPR 2016; Workshop on ''Spontaneous Facial Behavior 
@@ -561,7 +555,7 @@ CVPR, FG, BMVC, ICPR, CRV, AVSS, etc.</font></span></p>
 Learning for Vision-based Motion Analysis, 2009</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">Editor of IGI global book: Machine 
-Learning for Human Motion Analysis: Theory and Practice, 2009;&nbsp; </font> </span></p>
+Learning for Human Motion Analysis: Theory and Practice, 2009;</font></span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <span lang="EN-US"><font size="4">Author of Springer book: Computer 
 Vision Using Local Binary Patterns. Springer, 2011.</font></span></p>
