--- a/publications.htm
+++ b/publications.htm
@@ -211,7 +211,7 @@ Transactions on Interactive Intelligent Systems (TIIS). 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font size="4"><span lang="en-us">&nbsp;</span>332. Hao Yu, Xu Cheng, Hevin 
 Cheng, Wei Peng, Zitong Yu, <b>Guoying Zhao</b>. Discovering attention-guided 
-cross-modality correlation for visible¨Cinfrared person re-identification. 
+cross-modality correlation for visible-infrared person re-identification. 
 Pattern Recognition. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <span lang="en-us"><font size="4">&nbsp;331. Abdelrahman Mostafa, </font></span><font size="4"> <b>Guoying Zhao</b>.</font><span lang="en-us"><font size="4"> 
@@ -234,7 +234,7 @@ IEEE Signal Processing Letters. 2024</font></font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;327. </span>
 Chaoxiong Ye, Ruyi Liu, Lijing Guo, <b>Guoying Zhao</b>, Qiang Liu. <u>A 
-negative emotional state impairs individuals¡¯ ability to filter distractors from 
+negative emotional state impairs individuals' ability to filter distractors from 
 working memory: an ERP study</u>. Cognitive, Affective, &amp; Behavioral 
 Neuroscience. 2024.</font></p>
 <p class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
@@ -312,11 +312,11 @@ Affective Computing, 202<span lang="en-us">3.</span></font></p>
 Liu, Xingming Zhang, Yante Li, Jinzhao Zhou, Xin Li, <b>Guoying Zhao</b><span lang="en-us">.
 <u>Graph-based Facial Affect Analysis: A Review</u>. </span>IEEE Transactions on 
 Affective Computing, 202<span lang="en-us">3</span>.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;<span lang="en-us">311</span>. <b>Guoying Zhao</b>, Yante Li, 
 Qianru Xu. <u>From Emotion AI to Cognitive AI</u>. International Journal of 
 Network Dynamics and Intelligence. 2023.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <span lang="en-us"><font face="Times New Roman" size="4">&nbsp;310.</font></span><font face="Times New Roman" size="4">&nbsp; 
 Zitong Yu, Yuming Shen, Jingang Shi, Hengshuang Zhao, Yawen Cui, Jiehua Zhang, 
 Philip Torr <span lang="en-us">&amp;</span> <b>Guoying Zhao</b>. <u>PhysFormer++: 
@@ -327,63 +327,63 @@ Transformer</u>. International Journal on Computer Vision (IJCV), 2023. </font><
 Liu, Xingming Zhang, Janne Kauttonen, <b>Guoying Zhao</b>. <u>Uncertain Facial 
 Expression Recognition via Multi-task Assisted Correction</u>. IEEE Transactions on 
 Multimedia, 2023. </font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">8</span>. Lili Liu, Zhaoqiang Xia, 
 Xiaobiao Zhang, <span lang="en-us">Jinye Peng, </span>Xiaoyi Feng, <b>Guoying 
 Zhao</b>. <u>Information-enhanced Network for Noncontact Heart Rate Estimation from 
 Facial Videos</u>. IEEE Transactions on Circuits and Systems for Video Technology, 
 2023.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">7</span>. Qianru Xu, Chaoxiong Ye, 
 Xueqiao Li, <b>Guoying Zhao</b> &amp; Piia Astikainen. <u>Pain modulates early sensory 
 brain responses to task-irrelevant emotional faces</u>. European Journal of Pain. 
 2023.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt; line-height:115%">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt; ">
 <font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">6</span>. Kaijie Ma, Lina Nie, Beijing Chen &amp; 
 <b>Guoying Zhao</b>. 
 <u>End-to-End Dual-Branch Network Towards Synthetic Speech Detection</u>. IEEE Signal 
 Processing Letters. 2023.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">5</span>. Jinsheng Wei, Haoyu Chen, 
 Guanming Lu, Jingjie Yan, Xie Yue, <b>Guoying Zhao</b>. <u>Prior Information based 
 Decomposition and Reconstruction Learning for Micro-Expression Recognition</u>. IEICE Transactions on Information and Systems, Vol. E106-D, No.10. 2023.</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;<span lang="en-us">304</span>. Lili Liu, Zhaoqiang Xia, 
 Xiaobiao Zhang, Jinye Peng , Xiaoyi Feng, <b>Guoying Zhao</b>. <u>Heart rate 
 estimation by leveraging static and dynamic region weights</u>. Journal of 
 Electronic Imaging. 2023.</font></p>
-<p class="MsoListParagraph" style="line-height: 115%; text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;303. </span>
 Beijing Chen, Xin Liu, Zhihua Xia, <b>Guoying Zhao</b>. <u>Privacy-preserving 
 DeepFake face image detection</u>. Digital Signal Processing 143, 2023</font></p>
-<p class="MsoListParagraph" style="line-height: 115%; text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;302. </span>
 Zitong Yu, Jukka Komulainen, Xiaobai Li, <b>Guoying Zhao</b>.
 <a href="https://link.springer.com/chapter/10.1007/978-981-19-5288-3_12">Review 
 of Face Presentation Attack Detection Competitions</a>. Handbook of Biometric 
 Anti-Spoofing: Presentation Attack Detection and Vulnerability Assessment: 
 287-336. Springer Nature Singapore</font></p>
-<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt; line-height:115%">
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt; ">
 <font face="Times New Roman" size="4">&nbsp;<span lang="en-us">301</span>. Hao Yu, Xu Cheng, Wei Peng, Weihao 
 Liu, <b>Guoying Zhao</b>. <u>Modality Unifying Network for Visible Infrared Person 
 Re-Identification</u>. ICCV 2023.</font></p>
-<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;<span lang="en-us">300</span>. Marko Savic, <b>Guoying Zhao</b>.
 <u>De-identification of facial videos while preserving remote physiological 
 utility</u>. BMVC 2023.</font></p>
-<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">9</span>. Abdelrahman Mostafa, Wei Peng,
 <b>Guoying Zhao</b>. <u>SRBGCN: Tangent space-Free Lorentz Transformations for 
 Graph Feature Learning</u>. BMVC 2023.</font></p>
-<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">8</span>. Hui Kuurila-Zhang, Haoyu Chen,
 <b>Guoying Zhao</b>. <u>Adaptive Adversarial Norm Space for Efficient 
 Adversarial Training</u>. BMVC 2023.</font></p>
-<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">7</span>. Haotian Liu, Qing Liu, Yang 
 Liu, Yixiong Liang, <b>Guoying Zhao</b>. <u>Exploring Effective Knowledge 
 Distillation for Tiny Object Detection</u>. ICIP 2023.</font></p>
-<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">6</span>. Andy Nguyen, Yante Li, Sanna 
 J&auml;rvel&auml;, Yang Liu and <b>Guoying Zhao</b>. <u>Emotional Synchrony through 
 Regulatory Triggers in Collaborative Learning: A Facial Expression Recognition 
