--- a/publications.htm
+++ b/publications.htm
@@ -510,7 +510,7 @@ Yang, Angelos Fylakis, Md. Surat-E-Mostafa, Arto Hautala, Yong Hu, Jinye Peng,
 <font face="Times New Roman" size="4"><u>Pain fingerprinting using multimodal 
 sensing: pilot study.</u></font> <font face="Times New Roman" size="4">
 Multimedia </font><font face="Times New Roman" size="4">Tools and Applications, 
-81,&nbsp;5717–5742, 2022.</font></p>
+81,&nbsp;5717-5742, 2022.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;27<span lang="en-us">3</span>. 
 Beijing Chen, Wenjin Tan, Yiting Wang, <b>Guoying Zhao</b>.
@@ -950,11 +950,6 @@ Electronics, 28(1), Jan. 2019</font></p>
 Lu, Xiaopeng Hong, <b>Guoying Zhao</b>, Weitao Zhang. <u>Micro-expression 
 recognition based on local region method</u> . Journal of Computer Applications, 
 2019, 39(5): 1282-1287 (In Chinese)</span></font></p>
-<p class="Author" style="margin-top:0in;margin-right:0in;margin-bottom:6.0pt;
-margin-left:.25in;text-align:justify;text-justify:inter-ideograph;line-height:
-115%;layout-grid-mode:char"><font size="4">
-<span style="font-family: Times New Roman">张延良, 卢冰, 洪晓鹏, 赵国英, 
-张伟涛。基于局部区域方法的微表情识别. 计算机应用, 2019, 39(5): 1282-1287。</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span lang="EN-US" style="font-family: 'Times New Roman'"><font size="4">&nbsp;197. Zitong Yu, Xiaobai Li, <b>Guoying Zhao</b>. Affect recognition and education. 
 Artificial Intelligence. 2019, 06 (In Chinese)</font></span></p>
