--- a/teammembers.htm
+++ b/teammembers.htm
@@ -48,7 +48,8 @@ span.contentpasted0
 		<font face="Times New Roman"><b><span lang="zh-cn">Dr</span>. </b></font>
 		<b><font face="Times New Roman">Qing <span lang="zh-cn">LIU</span></font></b><p style="text-align: center">
 		&nbsp;<p style="text-align: center">
-		<b><span lang="zh-cn">Academy Research Fellow</span></b></td>
+		<b><span lang="zh-cn">Academy Research Fellow</span></b><p style="text-align: center">
+		&nbsp;</td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN</b></font><p>&nbsp;</p>
 		<p style="text-align: center"><b>
@@ -71,7 +72,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Kejuan.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
+		<img border="0" src="Licai.jpg"></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -84,7 +85,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<b><font face="Times New Roman">Dr. Kejuan YUE</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
+		<b><span lang="en-us">Dr. Licai SUN</span></b></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -156,9 +157,9 @@ span.contentpasted0
 		<td width="223" height="0" align="center" valign="top">
 		<img border="0" src="Boyi.jpg" width="147" height="148"></td>
 		<td width="226" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
 		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
+		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
 		<td height="0" align="center" valign="top" width="184">
 		　</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -168,9 +169,9 @@ span.contentpasted0
 		<td width="223" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
 		<td width="226" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<font face="Times New Roman"><b>Mr. Samuel B<span lang="zh-cn">OCCARA</span></b></font></td>
 		<td height="0" align="center" valign="top" width="224">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
+		<p><font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font></td>
 		<td height="0" align="center" valign="top" width="184">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　</td>
 		<td height="0" align="center" valign="top" width="225">
@@ -221,10 +222,10 @@ embed;vertical-align:baseline">
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Jens.jpg" width="119" height="162"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -233,13 +234,6 @@ embed;vertical-align:baseline">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="184">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font><p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Doctoral student</b></font></p>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Southeast University</b></font></p>
-		<p style="text-align: center">Oct. 2022 - Oct. 2024</p></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<b><span lang="zh-cn">Mr. Yushun X</span></b><span lang="en-us"><b>IAO</b></span><p>&nbsp;</p>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
@@ -247,6 +241,13 @@ embed;vertical-align:baseline">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Southeast University</b></font></p>
 		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p></td>
+		<td height="0" align="center" valign="top" width="225">
+		<b>Mr. Jens GEBELE </b>
+		<p>&nbsp;</p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<b><font face="Times New Roman">Doctoral researcher<br>
+		<br>
+		Julius-Maximilians-Universität Würzburg</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -489,6 +490,17 @@ embed;vertical-align:baseline">
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font><p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Doctoral student</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Southeast University</b></font></p>
+		<p style="text-align: center">Oct. 2022 - Oct. 2024</p></td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Yujie.jpg"></td>
